tests/diagnostics/field_type_mismatch.stderr
error[E0063]: フィールド 'x' の型が一致しません (期待 i64, 実際 f64)
 --> tests/diagnostics/field_type_mismatch.kal:3:8
  |
3 | P { x: 1.0 };
  |        ^^^
1 個のエラーで中断しました
