tests/diagnostics/field_type_mismatch.kal
# A struct field is initialized with the wrong type (f64 for an i64 field).
struct P { x: i64 }
P { x: 1.0 };
